# rust-mod-dev

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO  build.rs  cofg.schema.json  cspell.json
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: cli.yml  rust.yml
locales/: app.yml
src/: boot_json.rs  cofg.rs  const.rs  fs_utils.rs  main.rs  tests.rs
