[package]
    name    = "mod-dev"
    version = "1.3.1"
    edition = "2021"

[dependencies]
    glob = "0.3.2"
    serde_json = "1.0.140"
    serde = { version = "1.0.219", features = [
        "derive",
    ] }
    zip = "2.2.3"
    walkdir = "2.5.0"
    colog = "1.3.0"
    log = "0.4.26"
    rust-i18n = "3.1.3"
    config = "0.15.11"
