[package]
    name = "mod-dev"
    version = "1.3.4"
    authors = [
        "Paul-16098",
    ]
    license-file = "./LICENSE.txt"
    readme = "./README.md"
    homepage = "https://github.com/Paul-16098/rust-mod-dev"
    repository = "https://github.com/Paul-16098/rust-mod-dev"
    edition = "2021"

[dependencies]
    glob = "0.3.2"
    serde_json = "1.0.140"
    serde = { version = "1.0.219", features = [
        "derive",
    ] }
    zip = "2.6.1"
    walkdir = "2.5.0"
    colog = "1.3.0"
    log = "0.4.27"
    rust-i18n = "3.1.4"
    config = "0.15.11"
    nest_struct = "0.5.3"
    zip-extensions = "0.8.1"
    clap = { version = "4.5.35", features = [
        "derive",
    ] }
    human-panic = "2.0.2"
