[package]
    name = "mod-dev"
    version = "1.3.6"
    authors = [
        "Paul-16098",
    ]
    license-file = "./LICENSE.txt"
    readme = "./README.md"
    homepage = "https://github.com/Paul-16098/rust-mod-dev"
    repository = "https://github.com/Paul-16098/rust-mod-dev"
    edition = "2024"

[dependencies]
    glob = "0.3.2"
    serde_json = "1.0.140"
    serde = { version = "1.0.219", features = [
        "derive",
    ] }
    zip = "2.6.1"
    walkdir = "2.5.0"
    colog = "1.3.0"
    log = "0.4.27"
    rust-i18n = "3.1.4"
    config = "0.15.11"
    nest_struct = "0.5.4"
    zip-extensions = "0.8.2"
    # zip-extensions = { git = "https://github.com/andriipopazov/zip-extensions-rs", branch = "fix/2.6.0-zip-template" } # fix zip 2.6.0
    clap = { version = "4.5.37", features = [
        "derive",
    ] }
    human-panic = "2.0.2"
    lazy_static = "1.5.0"
